# ephemeral-token-standard

./: .gitignore  Anchor.toml  CLAUDE.md  DECISIONS.md  DEVNET_PROOF.md  FINDINGS.md  LICENSE  MISSIONS.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
programs/ephemere/: Cargo.toml
programs/ephemere/src/: lib.rs
scripts/: devnet-airdrop.sh  devnet-deploy.sh  devnet-try-deploy.sh  devnet_demo.ts  wsl-test.sh
tests/: adversarial.ts  curve_fuzz.ts  lifecycle.ts
tools/: calibrate.py
